--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,4 +1,16 @@
-@import '_vars';
-@import '_reset';
-@import '_mixing';
+@import "_vars";
+@import "_reset";
+@import "_mixing";
 
+body {
+    font-family: "Raleway", sans-serif;
+    font-size: 16px;
+    line-height: 150%;
+    color: $mainColor;
+}
+
+.container{
+    max-width: 1200px;
+    padding: 0 10px;
+    margin: 0 auto;
+}
