--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,9 +1,11 @@
 @import "_vars";
 @import "_reset";
 @import "_mixing";
+@import "_header";
 
 body {
     font-family: "Raleway", sans-serif;
+    font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     color: $mainColor;
