--- a/app/scss/_statistic.scss
+++ b/app/scss/_statistic.scss
@@ -3,12 +3,11 @@
     text-align: center;
 
     &__content {
-     display: grid;
-     grid-template-columns: repeat(4, 1fr);
-     grid-gap: 30px;
-     grid-template-rows: auto;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap: 30px;
     }
-    
+
     &__num {
         font-weight: 500;
         font-size: 58px;
@@ -22,7 +21,23 @@
         font-size: 14px;
         line-height: 120%;
         max-width: 270px;
+        margin: 0 auto;
     }
 }
 
-
+@media (max-width: 1050px) {
+    .statistic {
+        &__content {
+            grid-template-columns: repeat(2, 1fr);
+            grid-row-gap: 50px;
+        }
+    }
+}
+@media (max-width: 550px) {
+    .statistic {
+        &__content {
+            grid-template-columns: 1fr;
+            grid-row-gap: 50px;
+        }
+    }
+}
