--- a/app/scss/_statistic.scss
+++ b/app/scss/_statistic.scss
@@ -35,6 +35,7 @@
 }
 @media (max-width: 550px) {
     .statistic {
+        padding-bottom: 50px;
         &__content {
             grid-template-columns: 1fr;
             grid-row-gap: 50px;
