--- a/app/scss/_offer.scss
+++ b/app/scss/_offer.scss
@@ -31,6 +31,27 @@
     }
 }
 
+.offer__two{
+    background-image: url(../images/offer__bg\ 1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: $mainColor;
+    & .offer__inner{
+        justify-content: end;
+    }
+
+    & .offer__title,
+    & .offer__text{
+        max-width: 508px;
+    }
+
+    & .section__btn{
+        color: $white;
+        padding: 20px 56px;
+    }
+}
+
 @media (max-width: 1100px) {
     .offer{
         padding: 80px 0;
@@ -40,6 +61,10 @@
             align-items: center;
             gap: 70px;
         }
+    }
+
+    .offer__two{
+        background-image: url(../images/offer__bg-opacity.jpg);
     }
 }
 
