--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -22,9 +22,16 @@
 
     &__content {
         display: flex;
-        justify-content: space-between;
+        gap: 100px;
         align-items: start;
         padding-bottom: 50px;
+    }
+
+    &__wrapper{
+        display: flex;
+        align-items: start;
+        justify-content: space-between;
+        flex-basis: 70%;
     }
 
     &__text {
@@ -88,4 +95,57 @@
     }
 
 
+}
+
+@media (max-width:  1000px) {
+    .footer{
+        &__content{
+            gap: 50px;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+
+        }
+        &__wrapper{
+            flex-basis: 100%;
+        }
+    }
+}
+
+@media (max-width: 800px) {
+    .footer{
+        &::after,
+        &::before{
+            left: 0;
+        }
+        &::before{
+            bottom: 150px;
+        }
+        &__copyright{
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            gap: 30px;
+            & p:nth-child(2){
+                margin-left: 0;
+            }
+        }
+    }
+}
+
+@media (max-width: 650px) {
+    .footer{
+        text-align: center;
+
+        &__content,
+        &__social{
+            justify-content: center;
+        }
+
+
+        &__wrapper{
+           flex-direction: column;
+            gap: 30px;
+            align-items: center;
+        }
+    }
 }
